tests/src/type-error/type-sig2.stau
f :: In -> Int
f x = x * 3

main = f 3

